--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Zack's Game of War</title>
 </head>
 <body>
+    <p>Check the console log!</p>
     <script src="script.js"></script>
+    
 </body>
 </html>
